# repro-apache-pulsar

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  tsconfig.json
repro/: .swcrc  BUILD.bazel  package.json  tsconfig.build.json  tsconfig.json
repro/src/: main.ts
